[project]
name = "crypto-peer-analysis"
version = "0.1.0"
description = "Streamlit crypto peer-group analytics dashboard"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "pandas",
    "numpy",
    "plotly",
    "requests",
    "nbformat>=4.2.0",
    "jupyter>=1.1.1",
    "altair>=6.1.0",
    "yfinance>=1.3.0",
]
